# learn-hatch

./: .gitignore  LICENSE  README.md  SIR_model.py  SIR_model_script.py  pyproject.toml
src/zeratulhx_epi_models/: SEIR.py  SIR.py  __init__.py  utils.py
